--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,136 @@
-.App {
+.container {
+  padding: 3% 2%;
+  width: 320px;
+  margin: 5% auto;
+  box-shadow: 0px 0px 5px 0px #b3b2b251;
+  border-radius: 5px;
+  background-color: #fff;
+  text-transform: capitalize;
+}
+
+.title {
+  font-size: 1.8rem;
   text-align: center;
+  color: #49434e;
+  margin: 0 0 2%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.alerta {
+  padding: 2%;
+  color: #4d4d4d;
+  text-align: center;
+  font-size: .7rem;
+  border-radius: 3px;
+  min-height: 12px;
+  margin-top: 0;
+  transition: .5s ease;
+  opacity: 0;
+  vertical-align: baseline;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.alerta-erro {
+  background-color: hsla(0, 100%, 50%, 0.3);
+  opacity: 1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.alerta-sucesso {
+  background-color: hsla(132, 80%, 50%, 0.3);
+  opacity: 1;
+}
+
+form {
   display: flex;
-  flex-direction: column;
+  margin-bottom: 10%;
+}
+
+form input {
+  flex-grow: 1;
+  border: none;
+  background-color: #fafafa;
+  border-radius: 5px 0 0 5px;
+  height: 34.5px;
+  padding-left: 4%;
+  font-size: .8rem;
+  color: rgb(60, 60, 60);
+  font-family: 'Comfortaa', cursive;
+}
+
+input:focus, input:focus {
+  outline-color: rgba(201, 201, 201, 0.666);
+}
+
+.add-btn {
+  background-color: rgba(181, 213, 243, 0.666);
+  border-radius: 0 5px 5px 0;
+  padding: 2% 5%;
+  font-size: .9rem;
+  transition: linear .3s;
+}
+
+.add-btn:hover {
+  background-color: rgb(155, 201, 244);
+}
+
+.item-lista {
+  margin: 5% 0;
+  padding: 2% 0;
+  border-radius: 5px;
+  font-size: .8rem;
+  letter-spacing: 1px;
+  display: flex;
+  justify-content: space-between;
+  color: #323232;
+}
+
+.item-checkbox {
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.item-lista input {
+  margin-right: 10px;
+  transform: scale(0.85);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.item-lista input:checked~label {
+  text-decoration: line-through;
+  color: #b3b3b3;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10% 0 0;
+  border-radius: 5px;
+  font-size: .85rem;
+  text-transform: lowercase;
+  color: #323232;
+}
+
+button {
+  border: 0;
+  font-size: .7rem;
+  cursor: pointer;
+  color: #212121f2;
+}
+.btn {
+  background-color: #fff;
+  color:#49434e;
+}
+
+.clear-btn {
+  padding: 2% 5%;
+  font-size: 1.1rem;
+  transition: linear .3s;
+  background-color: #ff11212d;
+  border-radius: 5px;
+  letter-spacing: 1px;
+  color: #535353da;
+}
+
+.numero-pendencia {
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: #49434e;
 }
